--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-geojson": "^0.1.1",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-google-signin": "^1.0.0-rc7",
+    "react-native-hyperlink": "0.0.14",
     "react-native-input-scroll-view": "^1.7.2",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-maps": "^0.21.0",
