--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-maps": "^0.21.0",
     "react-native-maps-directions": "^1.6.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^6.5.0",
     "react-native-modal-selector": "0.0.27",
     "react-native-orientation": "^3.1.3",
