--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,6 +170,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
+    compile project(':react-native-reanimated')
     compile project(':react-native-video')
     compile project(':react-native-simple-compass')
     compile project(':react-native-orientation')
