--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,10 @@ target 'amonra' do
   pod 'react-native-orientation', :path => '../node_modules/react-native-orientation'
   pod 'react-native-video', :path => '../node_modules/react-native-video'
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   post_install do |installer|
   installer.pods_project.targets.each do |target|
     if target.name == 'react-native-google-maps'
