--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-firebase": "^4.3.8",
     "react-native-geojson": "^0.1.1",
     "react-native-geolocation-service": "^2.0.0",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-google-signin": "^1.0.0-rc7",
     "react-native-input-scroll-view": "^1.7.2",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
@@ -26,13 +27,17 @@
     "react-native-modal": "^6.5.0",
     "react-native-modal-selector": "0.0.27",
     "react-native-orientation": "^3.1.3",
+    "react-native-reanimated": "^1.1.0",
     "react-native-scalable-image": "^0.4.0",
     "react-native-simple-compass": "^1.0.0",
     "react-native-swiper": "^1.5.13",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-video": "^3.1.0",
-    "react-navigation": "^2.9.3",
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
     "react-viro": "2.13.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "rn-sliding-up-panel": "^1.3.0"
   },
   "devDependencies": {
