--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "react-native-modal": "^6.5.0",
     "react-native-modal-selector": "0.0.27",
     "react-native-orientation": "^3.1.3",
-    "react-native-reanimated": "^1.1.0",
     "react-native-scalable-image": "^0.4.0",
     "react-native-simple-compass": "^1.0.0",
     "react-native-swiper": "^1.5.13",
@@ -37,6 +36,7 @@
     "react-redux": "^7.1.0",
     "react-viro": "2.13.0",
     "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
     "rn-sliding-up-panel": "^1.3.0"
   },
