--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^16.6.1",
+    "@react-native-community/async-storage": "^1.6.1",
+    "react": "^16.8.3",
     "react-datetime": "^2.16.2",
-    "react-native": "^0.57.7",
+    "react-native": "^0.59.3",
     "react-native-check-box": "^2.1.0",
     "react-native-dash": "0.0.9",
     "react-native-datepicker": "^1.7.2",
-    "react-native-fbsdk": "^0.7.0",
     "react-native-firebase": "^4.3.8",
     "react-native-geojson": "^0.1.1",
     "react-native-geolocation-service": "^2.0.0",
@@ -21,7 +21,7 @@
     "react-native-google-signin": "^1.0.0-rc7",
     "react-native-input-scroll-view": "^1.7.2",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
-    "react-native-maps": "^0.21.0",
+    "react-native-maps": "0.24.2",
     "react-native-maps-directions": "^1.6.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^6.5.0",
@@ -31,23 +31,21 @@
     "react-native-simple-compass": "^1.0.0",
     "react-native-swiper": "^1.5.13",
     "react-native-timeline-listview": "^0.2.3",
-    "react-native-video": "^3.1.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
-    "react-viro": "2.13.0",
+    "react-viro": "2.15.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
     "rn-sliding-up-panel": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "babel-jest": "23.4.2",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "23.4.2",
+    "@babel/core": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "babel-jest": "^24.7.1",
+    "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.53.1",
-    "react-native-select-list": "^1.0.5",
-    "react-test-renderer": "16.4.1",
+    "react-test-renderer": "16.8.3",
     "schedule": "0.4.0"
   },
   "jest": {
