--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^6.5.0",
     "react-native-modal-selector": "0.0.27",
+    "react-native-orientation-locker": "^1.1.6",
     "react-native-scalable-image": "^0.4.0",
     "react-native-simple-compass": "^1.0.0",
     "react-native-swiper": "^1.5.13",
