--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -174,6 +174,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-orientation-locker')
     implementation project(':@react-native-community_async-storage')
     compile project(':react-native-gesture-handler')
     compile project(':react-native-simple-compass')
