--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,6 +180,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-video')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-orientation-locker')
     implementation project(':@react-native-community_async-storage')
