--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-swiper": "^1.5.13",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "react-viro": "2.16.0",
