Implemented splash screen for the initial screen of the application

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,6 +47,8 @@ target 'amonra' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   post_install do |installer|
   installer.pods_project.targets.each do |target|
     if target.name == 'react-native-google-maps'
