--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-native-check-box": "^2.1.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
-    "react-native-firebase": "^4.3.8",
     "react-native-geojson": "^0.1.1",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.3.0",
@@ -39,6 +38,7 @@
     "react-viro": "2.16.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "rn-sliding-up-panel": "^1.3.0"
   },
