--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "point-in-polygon": "^1.0.1",
     "react": "^16.8.3",
     "react-datetime": "^2.16.2",
     "react-native": "^0.59.3",
