--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,6 +180,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-svg')
     implementation project(':react-native-splash-screen')
     implementation project(':react-native-video')
     implementation project(':react-native-vector-icons')
