--- a/ios/Podfile
+++ b/ios/Podfile
@@ -49,6 +49,8 @@ target 'amonra' do
 
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   post_install do |installer|
   installer.pods_project.targets.each do |target|
     if target.name == 'react-native-google-maps'
