--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "point-in-polygon": "^1.0.1",
     "react": "^16.8.3",
     "react-datetime": "^2.16.2",
     "react-native": "^0.59.3",
@@ -26,9 +27,11 @@
     "react-native-modal": "^6.5.0",
     "react-native-modal-selector": "0.0.27",
     "react-native-orientation-locker": "^1.1.6",
+    "react-native-responsive-screen": "^1.3.0",
     "react-native-scalable-image": "^0.4.0",
     "react-native-simple-compass": "^1.0.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^9.9.9",
     "react-native-swiper": "^1.5.13",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "^6.6.0",
