--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.0",
+    "react-native-video-player": "^0.10.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "react-viro": "2.16.0",
