--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -217,6 +217,8 @@ dependencies {
    implementation project(':react-native-geolocation-service')
    implementation 'com.google.android.gms:play-services-auth:16.0.1' 
    implementation project(':react-native-simple-compass')
+    implementation 'com.facebook.fresco:fresco:1.10.0'
+    implementation 'com.facebook.fresco:animated-gif:1.10.0'
 }
 
 // Run this once to be able to run the application with BUCK
