--- a/package.json
+++ b/package.json
@@ -10,19 +10,12 @@
     "@react-native-community/async-storage": "^1.6.1",
     "point-in-polygon": "^1.0.1",
     "react": "^16.8.3",
-    "react-datetime": "^2.16.2",
     "react-native": "^0.59.3",
     "react-native-check-box": "^2.1.0",
-    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
-    "react-native-geojson": "^0.1.1",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-google-signin": "^1.0.0-rc7",
-    "react-native-input-scroll-view": "^1.7.2",
-    "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-maps": "0.24.2",
-    "react-native-maps-directions": "^1.6.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^6.5.0",
     "react-native-modal-selector": "0.0.27",
@@ -31,9 +24,7 @@
     "react-native-scalable-image": "^0.4.0",
     "react-native-simple-compass": "^1.0.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-svg": "^9.9.9",
     "react-native-swiper": "^1.5.13",
-    "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.0",
     "react-native-video-player": "^0.10.0",
@@ -43,8 +34,7 @@
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
-    "rn-sliding-up-panel": "^1.3.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
